--- a/Vacation.html
+++ b/Vacation.html
@@ -98,8 +98,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col text-center">
-					<h2 class="section_title"> Best Deals ! </h2>
-				</div>
+				  <h2 class="section_title"> Best Deals ! </h2>
+			   </div>
 			</div>
 			<div class="row offers_items">
 
@@ -246,173 +246,143 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</div>
     <!--end of offer-->
 
 
-
 <!--galley start-->
 		<section id="gallery" class="gallery">
 			<div class="container">
-				<div class="gallery-details">
-					<div class="gallary-header text-center">
-						<h2>
-							Top destinations!
-						</h2>
-						<p>
-						You can't miss these top attractions .   
-						</p>
-					</div>
-					<div class="gallery-box">
-						<div class="gallery-content">
-						  	<div class="filtr-container">
-						  		<div class="row">
+			 <div class="gallery-details">
+			  <div class="gallary-header text-center">
+			   <h2>Top destinations!</h2>
+			    <p>You can't miss these top attractions .</p>
+		        </div>
+		       <div class="gallery-box">
+			  <div class="gallery-content">
+			   <div class="filtr-container">
+			    <div class="row">
+			    <div class="col-md-6">
+			     <div class="filtr-item">
+			     <img src="assets/images/india.jpg" alt="portfolio image"/>
+			<div class="item-title">
+			<a href="#">India</a>
+			  <p><span>20 tours</span></p>
+                          <p><span>15 places</span></p>
+			</div>
+			</div>
+			</div>
 
-						  			<div class="col-md-6">
-						  				<div class="filtr-item">
-											<img src="assets/images/india.jpg" alt="portfolio image"/>
-											<div class="item-title">
-												<a href="#">
-													India
-												</a>
-												<p><span>20 tours</span></p>
-                                                <p><span>15 places</span></p>
-											</div>
-										</div>
-						  			</div>
+		<div class="col-md-6">
+			  <div class="filtr-item">
+			    <img src="assets/images/london.jpg" alt="portfolio image"/>
+			    <div class="item-title">
+			     <a href="#">London</a>
+			    <p><span>12 tours</span></p>
+                            <p><span>9 places</span></p>
+			</div> 
+			</div>
+		</div>
 
-						  			<div class="col-md-6">
-						  				<div class="filtr-item">
-											<img src="assets/images/london.jpg" alt="portfolio image"/>
-											<div class="item-title">
-												<a href="#">
-													London
-												</a>
-												<p><span>12 tours</span></p>
-                                                <p><span>9 places</span></p>
-											</div> 
-										</div>
-						  			</div>
+		 <div class="col-md-4">
+			 <div class="filtr-item">
+			  <img src="assets/images/egypt.jpg" alt="portfolio image"/>
+			  <div class="item-title">
+			  <a href="#">Egypt</a>
+			  <p><span>25 tours</span></p>
+                         <p><span>10 places</span></p>
+			</div>
+			</div>
+		     </div>
 
-						  			<div class="col-md-4">
-						  				<div class="filtr-item">
-											<img src="assets/images/egypt.jpg" alt="portfolio image"/>
-											<div class="item-title">
-												<a href="#">
-													Egypt
-												</a>
-												<p><span>25 tours</span></p>
-                                                <p><span>10 places</span></p>
-											</div>
-										</div>
-						  			</div>
+		<div class="col-md-4">
+			<div class="filtr-item">
+			<img src="assets/images/maldives.jpg" alt="portfolio image"/>
+			<div class="item-title">
+			<a href="#">Maldives</a>
+			<p><span>10 tours</span></p>
+                         <p><span>9 places</span></p>
+			</div> 
+			</div>
+		  </div>
 
-						  			<div class="col-md-4">
-						  				<div class="filtr-item">
-											<img src="assets/images/maldives.jpg" alt="portfolio image"/>
-											<div class="item-title">
-												<a href="#">
-													Maldives
-												</a>
-												<p><span>10 tours</span></p>
-                                                <p><span>9 places</span></p>
-											</div> 
-										</div>
-						  			</div>
+		<div class="col-md-4">
+			<div class="filtr-item">
+			<img src="assets/images/australia.jpg" alt="portfolio image"/>
+			<div class="item-title">
+			<a href="#">Australia</a>
+			<p><span>14 tours</span></p>
+                          <p><span>12 places</span></p>
+			</div> 
+			</div>
+		  </div>
 
-						  			<div class="col-md-4">
-						  				<div class="filtr-item">
-											<img src="assets/images/australia.jpg" alt="portfolio image"/>
-											<div class="item-title">
-												<a href="#">
-													Australia
-												</a>
-												<p><span>14 tours</span></p>
-                                                <p><span>12 places</span></p>
-											</div> 
-										</div>
-						  			</div>
+		<div class="col-md-6">
+			<div class="filtr-item">
+			<img src="assets/images/japan.jpg" alt="portfolio image"/>
+			<div class="item-title">
+			<a href="#">Japan</a>
+			<p><span>10 tours</span></p>
+                         <p><span>6 places</span></p>
+			</div> 
+			</div>
+		 </div>
 
-						  			<div class="col-md-6">
-						  				<div class="filtr-item">
-											<img src="assets/images/japan.jpg" alt="portfolio image"/>
-											<div class="item-title">
-												<a href="#">
-													Japan
-												</a>
-												<p><span>10 tours</span></p>
-                                                <p><span>6 places</span></p>
-											</div> 
-										</div>
-						  			</div>
-                                     
-                                      <div class="col-md-6">
-						  				<div class="filtr-item">
-											<img src="assets/images/sweden.jpg" alt="portfolio image"/>
-											<div class="item-title">
-												<a href="#">
-													Scandinavia
-												</a>
-												<p><span>18 tours</span></p>
-                                                <P<<span>12 places</span></p>
-											</div> 
-										</div>
-						  			</div>
-
-                                      <div class="col-md-4">
-						  				<div class="filtr-item">
-											<img src="assets/images/newyork.jpg" alt="portfolio image"/>
-											<div class="item-title">
-												<a href="#">
-													New York
-												</a>
-												<p><span>10 tours</span></p>
-                                                <p><span>9 places</span></p>
-											</div> 
-										</div>
-						  			</div>
-
-                                      <div class="col-md-4">
-						  				<div class="filtr-item">
-											<img src="assets/images/greece1.jpg" alt="portfolio image"/>
-											<div class="item-title">
-												<a href="#">
-													Greece
-												</a>
-												<p><span>8 tours</span></p>
-                                                <P><span>9 places</span></p>
-											</div> 
-										</div>
-						  			</div>
-
-                                      <div class="col-md-4">
-						  				<div class="filtr-item">
-											<img src="assets/images/dubai.jpg" alt="portfolio image"/>
-											<div class="item-title">
-												<a href="#">
-													UAE
-												</a>
-												<p><span>18 tours</span></p>
-                                                <p><span>9 places</span></p>
-											</div> 
-										</div>
-						  			</div>
-
- 
-
-						  		</div>
-
-						  	</div>
-						</div>
+                           <div class="col-md-6">
+				      <div class="filtr-item">
+					<img src="assets/images/sweden.jpg" alt="portfolio image"/>
+					<div class="item-title">
+					<a href="#">Scandinavia</a>
+					<p><span>18 tours</span></p>
+                                        <P><span>12 places</span></p>
+					</div>	
 					</div>
 				</div>
+
+                                      <div class="col-md-4">
+					  <div class="filtr-item">
+						<img src="assets/images/newyork.jpg" alt="portfolio image"/>
+						<div class="item-title">
+						<a href="#">Newyork</a>
+						<p><span>25 tours</span></p>
+                                                <p><span>10 places</span></p>
+						</div>
+						</div>
+					</div>
+
+                                      <div class="col-md-4">
+					  <div class="filtr-item">
+					   <img src="assets/images/greece1.jpg" alt="portfolio image"/>
+					   <div class="item-title">
+					    <a href="#">Greece</a>
+						<p><span>8 tours</span></p>
+                                                <P><span>9 places</span></p>
+						</div> 
+					    </div>
+					</div>
+
+                                   <div class="col-md-4">
+					<div class="filtr-item">
+					  <img src="assets/images/dubai.jpg" alt="portfolio image"/>
+					    <div class="item-title">
+						<a href="#">UAE</a>
+						<p><span>18 tours</span></p>
+                                                <p><span>9 places</span></p>
+						</div> 
+					 </div>
+				     </div>
+				</div>
+			    </div>
 			</div>
-</section>
-		<!--gallery end-->
+		    </div>
+		</div>
+	   </div>
     </section>
+
+		<!--gallery end-->
+
 
 
     <!--our destination-->
@@ -437,7 +407,7 @@
         					<li><span class="flaticon-king-size"></span>3</li>
         					<li><span class="flaticon-mountains"></span>Near Mountain</li>
         				</ul>
-                        <div class="star d-flex clearfix">
+                                               <div class="star d-flex clearfix">
 	    						<div class="mr-auto float-left">
 		    						<span class="ion-ios-star"></span>
 		    						<span class="ion-ios-star"></span>
@@ -445,9 +415,9 @@
 		    						<span class="ion-ios-star"></span>
 	    						</div>
                         </div>
-        			</div>
-        		</div>
+        	     </div>
         	</div>
+             </div>
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
         			<a href="#" class="img" style="background-image: url(assets/images/destination2.jpg);"></a>
@@ -461,17 +431,17 @@
         					<li><span class="flaticon-king-size"></span>3</li>
         					<li><span class="flaticon-sun-umbrella"></span>Near Beach</li>
         				</ul>
-                         <div class="star d-flex clearfix">
-	    						<div class="mr-auto float-left">
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-	    						</div>
-                        </div>
-        			</div>
-        		</div>
-        	</div>
+                                          <div class="star d-flex clearfix">
+	    				    <div class="mr-auto float-left">
+		    				<span class="ion-ios-star"></span>
+		    				<span class="ion-ios-star"></span>
+		    				<span class="ion-ios-star"></span>
+		    				<span class="ion-ios-star"></span>
+	    				    </div>
+                         </div>
+        	       </div>
+        	  </div>
+               </div>
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
         			<a href="#" class="img" style="background-image: url(assets/images/destination3.jpg);"></a>
@@ -483,19 +453,19 @@
         				<ul>
         					<li><span class="flaticon-shower"></span>2</li>
         					<li><span class="flaticon-king-size"></span>3</li>
-                            <li><span class="flaticon-mountains"></span>Near Mountain</li>
+                                                <li><span class="flaticon-mountains"></span>Near Mountain</li>
         				</ul>
-                         <div class="star d-flex clearfix">
-	    						<div class="mr-auto float-left">
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-	    						</div>
+                                          <div class="star d-flex clearfix">
+	    				     <div class="mr-auto float-left">
+		    				<span class="ion-ios-star"></span>
+		    				<span class="ion-ios-star"></span>
+		    				<span class="ion-ios-star"></span>
+		    				<span class="ion-ios-star"></span>
+		    				<span class="ion-ios-star"></span>
+	    				</div>
                         </div>
-        			</div>
-        		</div>
+        	      </div>
+        	    </div>
         	</div>
 
         	<div class="col-md-4 ftco-animate">
@@ -511,17 +481,17 @@
         					<li><span class="flaticon-king-size"></span>3</li>
         					<li><span class="flaticon-mountains"></span>Near Mountain</li>
         				</ul>
-                         <div class="star d-flex clearfix">
-	    						<div class="mr-auto float-left">
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-	    						</div>
+                                      <div class="star d-flex clearfix">
+	    				 <div class="mr-auto float-left">
+		    			    <span class="ion-ios-star"></span>
+		    			    <span class="ion-ios-star"></span>
+		    			     <span class="ion-ios-star"></span>
+		    			      <span class="ion-ios-star"></span>
+		    				<span class="ion-ios-star"></span>
+	    				   </div>
                         </div>
-        			</div>
-        		</div>
+        	     </div>
+        	   </div>
         	</div>
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
@@ -560,19 +530,19 @@
         					<li><span class="flaticon-king-size"></span>3</li>
         					<li><span class="flaticon-mountains"></span>Near Mountain</li>
         				</ul>
-                         <div class="star d-flex clearfix">
-	    						<div class="mr-auto float-left">
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-	    						</div>
+                                        <div class="star d-flex clearfix">
+	    				   <div class="mr-auto float-left">
+		    				<span class="ion-ios-star"></span>
+		    				<span class="ion-ios-star"></span>
+		    				<span class="ion-ios-star"></span>
+		    				<span class="ion-ios-star"></span>
+		    				<span class="ion-ios-star"></span>
+	    				    </div>
                         </div>
-        			</div>
-        		</div>
+        	     </div>
+        	  </div>
         	</div>
-        </div>
+             </div>
     	</div>
 
         <div class="row mt-5">
