--- a/about.html
+++ b/about.html
@@ -117,70 +117,61 @@
       </div>
     </section>
 
-
-   
-
-    <!--adventure-->
+ <!--adventure-->
     <section class="feature-area section_gap_top">
 		<div class="container">
-        <div class="row align-items-end justify-content-left">
-				<div class="col-lg-12">
-				</div>
+                <div class="row align-items-end justify-content-left">
+		<div class="col-lg-12">
+		</div>
+		</div>
+		<div class="row">
+			<!-- single-feature -->
+		<div class="col-lg-4 col-md-6">
+			 <div class="single-feature">
+			  <div class="feature-details">
+			   <h5>Desert Riding  <br>
+			       adventures</h5>
+			    <p>Join a group of adventure-seekers for 11 days as they travel  the world's largest sand desert on camel back and deep into the heart of the desert.</p>
+			     <a href="#" class="primary-btn mb-40">Read More</a>
+		            </div>
+			      <div class="feature-thumb">
+			        <img class="img-fluid" src="assets/images/desert.jpg" alt="">
+			     </div>
+			   </div>
+		   </div>
+			<!-- single-feature -->
+		<div class="col-lg-4 col-md-6">
+			  <div class="single-feature">
+			   <div class="feature-details">
+			    <h5>Relaxation in the <br>
+			      Local Beach Campfire</h5>
+			    <p>There's nothing better than gathering around a big beach bonfire after a day of swimming, surfing or sunbathing.</p>
+			    <a href="#" class="primary-btn mb-40">Read More</a>
+			    </div>
+			    <div class="feature-thumb">
+			    <img class="img-fluid" src="assets/images/fire.jpg" alt="">
+			   </div>
+			 </div>
+		 </div>
+			<!-- single-feature -->
+		<div class="col-lg-4 col-md-6">
+			  <div class="single-feature">
+			     <div class="feature-details">
+			       <h5>Forest Exploration <br>Rainforest</h5>
+			        <p>Explore the oldest protected Rainforest in the western hemisphere. Experience the wonderful world of this ancient creation.</p>
+			        <a href="#" class="primary-btn mb-40">Read More</a>
+			    </div>
+			   <div class="feature-thumb">
+			   <img class="img-fluid" src="assets/images/forest.jpg" alt="">
+			   </div>
+			  </div>
 			</div>
-			<div class="row">
-				<!-- single-feature -->
-				<div class="col-lg-4 col-md-6">
-					<div class="single-feature">
-						<div class="feature-details">
-							<h5>Desert Riding  <br>
-								adventures</h5>
-							<p>Join a group of adventure-seekers for 11 days as they travel  the world's largest sand desert on camel back and deep into the heart of the desert.</p>
-							<a href="#" class="primary-btn mb-40">Read More</a>
-						</div>
-						<div class="feature-thumb">
-							<img class="img-fluid" src="assets/images/desert.jpg" alt="">
-						</div>
-					</div>
-				</div>
-				<!-- single-feature -->
-				<div class="col-lg-4 col-md-6">
-					<div class="single-feature">
-						<div class="feature-details">
-							<h5>Relaxation in the <br>
-								Local Beach Campfire</h5>
-							<p>
-								There's nothing better than gathering around a big beach bonfire after a day of swimming, surfing or sunbathing.
-							</p>
-							<a href="#" class="primary-btn mb-40">Read More</a>
-						</div>
-						<div class="feature-thumb">
-							<img class="img-fluid" src="assets/images/fire.jpg" alt="">
-						</div>
-					</div>
-				</div>
-				<!-- single-feature -->
-				<div class="col-lg-4 col-md-6">
-					<div class="single-feature">
-						<div class="feature-details">
-							<h5>Forest Exploration <br>
-								Rainforest</h5>
-							<p>
-								Explore the oldest protected Rainforest in the western hemisphere. Experience the wonderful world of this ancient creation.
-							</p>
-							<a href="#" class="primary-btn mb-40">Read More</a>
-						</div>
-						<div class="feature-thumb">
-							<img class="img-fluid" src="assets/images/forest.jpg" alt="">
-						</div>
-					</div>
-				</div>
-			</div>
+		  </div>
 		</div>
 	</section>
-    
+    <!--end of adventure-->
 
-    <!--vacation-->
-
+   
      <!--about-->
  <section class="ftco-counter img" id="section-counter">
     	<div class="container">
